--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint ./src/**/* --no-fix"
+    "lint": "eslint ./src/**/* --no-fix",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~41.0.1",
@@ -29,6 +30,9 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.11.0",
+    "husky": "^6.0.0",
+    "jest-expo": "^41.0.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
