--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-paper": "^4.8.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@testing-library/react-native": "^7.2.0",
+    "@types/jest": "^26.0.23",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
@@ -32,7 +36,6 @@
     "eslint-plugin-react-native": "^3.11.0",
     "husky": "^6.0.0",
     "jest-expo": "^41.0.0",
-    "react-test-renderer": "^17.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
